--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -14,8 +14,13 @@
   }
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: var(--background);
+  background: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
